[package]
name = "rustroika"
version = "3.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A utility to compare public transport costs"
authors = ["Ivan 'oosama' King"]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive", "cargo"] }
clap_derive = { version = "4.0.0-rc.1" }
colored = "3.0.0"
console = "0.15.11"
csv = "1.3.1"
directories = "6.0.0"
evalexpr = "12.0.2"
rust_xlsxwriter = "0.86.1"
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
shlex = "1.3.0"
thiserror = "2.0.12"
